[ux] fix status alignment

--- a/public/css/otalk.css
+++ b/public/css/otalk.css
@@ -503,13 +503,14 @@ h3 {
 #bookmarks li .status {
   color: #b7b7b7;
   font-size: 10px;
+  font-weight: 400;
   line-height: 12px;
   margin: 0;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 #roster li .status:not(:empty),
 #bookmarks li .status:not(:empty) {
-  margin-top: -2px;
+  margin-top: -8px;
 }
 #roster li .unread,
 #bookmarks li .unread {
